<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Whoo</string>
    <string name="main_title">Whoo: Photo..</string>
    <string name="helpinfo">The viewfinder below can help you take a head photo</string>
    <string name="upload">Upload</string>
    <string name="capture">Capture</string>
    <string name="default_serverip">192.168.111.111</string>
    <string name="default_algoindex">2</string>
    <string name="imgDesc">Image Description</string>
    <string name="percent_sign">%</string>
    <string name="slash_sign">/</string>
    <string name="action_load_dir">Load Directory</string>
    <string name="add_record">Add New</string>
    <string name="identify_record">Identify</string>
    <string name="btn_start_load">Start</string>
    <string name="btn_pause_load">Pause</string>
    <string name="btn_stop_load">Stop</string>
    <string name="image">Image Description</string>
    <string name="no_file_path">No Location selected</string>
</resources>
